# swagger.json
@@ -674,22 +674,27 @@
         "age": {
           "type": "number",
           "description": "User's age",
-          "example": "31"
+          "example": "32"
         },
         "height": {
           "type": "number",
           "description": "User's height",
           "example": "188"
         },
+        "weight": {
+          "type": "number",
+          "description": "User's weight",
+          "example": "83"
+        },
         "goal": {
           "type": "string",
           "description": "User's goal",
-          "enum": ["Lose fat", "Maintain", "Gain Muscle"] 
+          "example": "Maintain"
         },
         "activity": {
           "type": "number",
-          "description": "User's coefficient of activity",
-          "example": "1.725"
+          "description": "User's type of activity",
+          "example": "1.25"
         }
       }
      },
@@ -704,6 +709,41 @@
           "type": "string",
           "description": "User's email",
           "format": "email"
+        },
+        "gender": {
+          "type": "string",
+          "description": "User's gender",
+          "example": "male"
+        },
+        "age": {
+          "type": "number",
+          "description": "User's age",
+          "example": "32"
+        },
+        "height": {
+          "type": "number",
+          "description": "User's height",
+          "example": "188"
+        },
+        "weight": {
+          "type": "number",
+          "description": "User's weight",
+          "example": "83"
+        },
+        "goal": {
+          "type": "string",
+          "description": "User's goal",
+          "example": "Maintain"
+        },
+        "activity": {
+          "type": "number",
+          "description": "User's type of activity",
+          "example": "1.25"
+        },
+        "token": {
+          "type": "string",
+          "description": "token",
+          "example": ""
         }
       }
      },
@@ -726,8 +766,49 @@
      "LoginResponse": {
       "type": "object",
       "properties": {
+        "name": {
+          "type": "string",
+          "example": "user1234"
+        },
+        "email": {
+          "type": "string",
+          "description": "User's email",
+          "format": "email"
+        },
+        "gender": {
+          "type": "string",
+          "description": "User's gender",
+          "example": "male"
+        },
+        "age": {
+          "type": "number",
+          "description": "User's age",
+          "example": "32"
+        },
+        "height": {
+          "type": "number",
+          "description": "User's height",
+          "example": "188"
+        },
+        "weight": {
+          "type": "number",
+          "description": "User's weight",
+          "example": "83"
+        },
+        "goal": {
+          "type": "string",
+          "description": "User's goal",
+          "example": "Maintain"
+        },
+        "activity": {
+          "type": "number",
+          "description": "User's type of activity",
+          "example": "1.25"
+        },
         "token": {
-          "type": "string"
+          "type": "string",
+          "description": "token",
+          "example": ""
         }
       }
      },
@@ -742,6 +823,41 @@
           "type": "string",
           "description": "User's email",
           "format": "email"
+        },
+        "gender": {
+          "type": "string",
+          "description": "User's gender",
+          "example": "male"
+        },
+        "age": {
+          "type": "number",
+          "description": "User's age",
+          "example": "32"
+        },
+        "height": {
+          "type": "number",
+          "description": "User's height",
+          "example": "188"
+        },
+        "weight": {
+          "type": "number",
+          "description": "User's weight",
+          "example": "83"
+        },
+        "goal": {
+          "type": "string",
+          "description": "User's goal",
+          "example": "Maintain"
+        },
+        "activity": {
+          "type": "number",
+          "description": "User's type of activity",
+          "example": "1.25"
+        },
+        "token": {
+          "type": "string",
+          "description": "token",
+          "example": ""
         }
       }
      },
